@@ -630,6 +630,11 @@ def deserialize_path(path):
 class MapperOption(object):
     """Describe a modification to a Query."""
 
+    propagate_to_loaders = False
+    """if True, indicate this option should be carried along 
+    Query object generated by scalar or object lazy loaders.
+    """
+    
     def process_query(self, query):
         pass
 
@@ -643,7 +648,7 @@ class MapperOption(object):
 
 class ExtensionOption(MapperOption):
     """a MapperOption that applies a MapperExtension to a query operation."""
-
+    
     def __init__(self, ext):
         self.ext = ext
 
